tools/tests/errors/surf_cont_01.ki
# list index out of range (negative)
var a = [1, 2, 3]
discard a[-5]
